Merged 5.2.N (5.2.1) to trunk (5.2)    127181 slanglois: ACE-5340 Switch compilation to Java 8